Bug 12285: Allow easy printing of patron's fines.
Add a printing option to the staff client patron details page
to print a slip of patron's fines.

To test:
1) Apply patch.
2) Check in tools > Notices & Slips that you have FINESLIP slip,
   and a print message there. If not, run updatedatabase.pl
3) Either create some fines for a patron, or look up a patron
   with existing fines.
4) From that patron's detail page, and the Print-menu in
   the toolbar, select "Print fines"
5) You should get a slip of the patron's fines.

I removed superfluous $ signs in sample_notices.sql and updatedatabase.pl
Patch works now as expected. However, it needs now a Sign-off by somebody else.

Signed-off-by: Aleisha <aleishaamohia@hotmail.com>

Rebased-by: Emmi Takkinen <emmi.takkinen@koha-suomi.fi>

Signed-off-by: Owen Leonard <oleonard@myacpl.org>

--- a/installer/data/mysql/en/mandatory/sample_notices.yml
+++ b/installer/data/mysql/en/mandatory/sample_notices.yml
@@ -1576,3 +1576,26 @@ tables:
             - "This item must be renewed at the library."
             - "[% END %]"
             - "[% END %]"
+
+        - module: circulation
+          code: FINESLIP
+          branchcode: ""
+          name: "Patron fines -slip"
+          is_html: 1
+          title: "Fines and fees slip"
+          message_transport_type: pront
+          lang: default
+          content:
+            - "<<borrowers.firstname>> <<borrowers.surname>><br>"
+            - "<<borrowers.cardnumber>><br>"
+            - "Fines: <<total.fines>>"
+            - "<ul>"
+            - "<fines>"
+            - "<li>""
+            - "<<fines.date_due>>, <<fines.amount>><br>"
+            - "Barcode: <<items.barcode>><br>"
+            - "<<fines.description>>"
+            - "</li>"
+            - "</fines>"
+            - "</ul>"
+            - "Total: <<total.amount>>"
