--- a/admin/searchengine/elasticsearch/mappings.yaml
+++ b/admin/searchengine/elasticsearch/mappings.yaml
@@ -1565,7 +1565,7 @@ biblios:
       - facet: ''
         marc_field: '9526'
         marc_type: marc21
-        sort: ~
+        sort: 1
         suggestible: ''
     type: ''
   cn-suffix:
