KD-4939 Add materialtype to holds to pull report
Add biblioitems.itemtype (materialtype from the bibliographic record) to
holds to pull report.

--- a/admin/columns_settings.yml
+++ b/admin/columns_settings.yml
@@ -441,6 +441,8 @@ modules:
         -
           columnname: itemtypes
         -
+          columnname: materialtypes
+        -
           columnname: locations
         -
           columnname: sublocations
