Bug 30660: Add cancellation reason to holds delete endpoint
This patch adds cancellation reason to holds delete endpoint.

Test plan:
1) prove t/db_dependent/api/v1/holds.t

--- a/api/v1/swagger/paths/holds.yaml
+++ b/api/v1/swagger/paths/holds.yaml
@@ -353,6 +353,12 @@
     summary: Cancel hold
     parameters:
       - $ref: ../parameters.yaml#/hold_id_pp
+      - name: body
+        in: body
+        description: Cancellation reason
+        required: false
+        schema:
+          type: string
     produces:
       - application/json
     responses:
