KD-4630 Pendingreserves/Holds to pull
Koha-Suomi version of pendingreserves with additional columns and
background update.

Symlink pendingreserves.pl to misc/cronjobs and add a crontab entry
to enable updating the list in the background:

*/1 07-22 * * *$TRIGGER cronjobs/pendingreserves.pl --update

--- a/admin/columns_settings.yml
+++ b/admin/columns_settings.yml
@@ -1214,23 +1214,27 @@ modules:
             -
               columnname: libraries
             -
+              columnname: pickup_location
+            -
               columnname: barcodes
             -
               columnname: call_numbers
             -
               columnname: copy_numbers
             -
-              columnname: enumeration
-            -
               columnname: itemtypes
+            -
+              columnname: mtypes
             -
               columnname: locations
             -
+              columnname: sub_locations
+            -
+              columnname: ccodes
+            -
+              columnname: notes
+            -
               columnname: hold_date
-            -
-              columnname: reserve_notes
-            -
-              columnname: pickup_location
             -
               columnname: action
 
