Bug 30780: Librarians with only "place_holds" permissions can not update holds data via REST API
This patch enables librarians with only "place_holds" permissions to cancel, suspend and resume holds via REST API.

Test plan:
1) Try to cancel or suspend a hold with only "place_holds" permissions
2) See that it is forbidden.
3) Apply the patch
4) Cancel a hold again
5) The cancellation succeeds
6) prove t/db_dependent/api/v1/holds.t

Sponsored-by: Koha-Suomi Oy

--- a/api/v1/swagger/paths/holds.yaml
+++ b/api/v1/swagger/paths/holds.yaml
@@ -380,7 +380,7 @@
           $ref: ../definitions.yaml#/error
     x-koha-authorization:
       permissions:
-        reserveforothers: "1"
+        reserveforothers: place_holds
 "/holds/{hold_id}/priority":
   put:
     x-mojo-to: Holds#update_priority
@@ -484,7 +484,7 @@
           $ref: ../definitions.yaml#/error
     x-koha-authorization:
       permissions:
-        reserveforothers: "1"
+        reserveforothers: place_holds
   delete:
     x-mojo-to: Holds#resume
     operationId: resumeHold
@@ -526,7 +526,7 @@
           $ref: ../definitions.yaml#/error
     x-koha-authorization:
       permissions:
-        reserveforothers: "1"
+        reserveforothers: place_holds
 "/holds/{hold_id}/pickup_locations":
   get:
     x-mojo-to: Holds#pickup_locations
