Bug 5312: Allow additional properties for item in api (sub_location fix)

--- a/api/v1/swagger/definitions/item.yaml
+++ b/api/v1/swagger/definitions/item.yaml
@@ -211,7 +211,7 @@ properties:
   exclude_from_local_holds_priority:
     type: boolean
     description: Exclude this item from local holds priority.
-additionalProperties: false
+additionalProperties: true
 required:
   - item_id
   - biblio_id
