--- a/api/v1/swagger/paths.yaml
+++ b/api/v1/swagger/paths.yaml
@@ -55,6 +55,10 @@
   $ref: paths/holds.yaml#/~1holds~1{hold_id}~1pickup_locations
 "/holds/{hold_id}/pickup_location":
   $ref: paths/holds.yaml#/~1holds~1{hold_id}~1pickup_location
+"/holds/{hold_id}/hold_date":
+  $ref: paths/holds.yaml#/~1holds~1{hold_id}~1hold_date
+"/holds/{hold_id}/expiration_date":
+  $ref: paths/holds.yaml#/~1holds~1{hold_id}~1expiration_date
 /items:
   $ref: paths/items.yaml#/~1items
 "/items/{item_id}":
