KD-5288 add additional parameters to patron api definition Fixes Properties not allowed: smsalertnumber with Finna when updating patron data

--- a/api/v1/swagger/definitions/patron.yaml
+++ b/api/v1/swagger/definitions/patron.yaml
@@ -328,7 +328,7 @@ properties:
     description: patron's extended attributes
     items:
       $ref: patron_extended_attribute.yaml
-additionalProperties: false
+additionalProperties: true
 required:
   - surname
   - address
