KD-4630-2 Bring old Koha-Suomi holds to pull back
New pendingreserves/holds to pull will not work in our environment.
It pushes approximately hundred times more data to the browser than
the old Koha-Suomi version, making it slow and very network
intensive.

This commit will bring old Koha-Suomi version of the holds to pull
back, along with some improvements.

--- a/admin/columns_settings.yml
+++ b/admin/columns_settings.yml
@@ -1238,6 +1238,43 @@ modules:
             -
               columnname: action
 
+      kohasuomi-holds-to-pull:
+        columns:
+            -
+              columnname: pull
+            -
+              columnname: available
+            -
+              columnname: holds
+            -
+              columnname: next_patron
+            -
+              columnname: from
+            -
+              columnname: to
+            -
+              columnname: call_numbers
+            -
+              columnname: title
+            -
+              columnname: copies
+            -
+              columnname: enumeration
+            -
+              columnname: itemtypes
+            -
+              columnname: materials
+            -
+              columnname: locations
+            -
+              columnname: sublocations
+            -
+              columnname: collections
+            -
+              columnname: itemnotes
+            -
+              columnname: next_hold
+
     holdsratios:
       holds-ratios:
         columns:
