KD-4630-3 Cleanups and data handling improvements
Number field renamed to Issue. Issue number for serials added to
title field, so that users can optionally hide the Issue-field.
Code cleanups and reformatting on holds-to-pull and the template.
Fix the issue with "undefined" splits.

--- a/admin/columns_settings.yml
+++ b/admin/columns_settings.yml
@@ -1259,7 +1259,7 @@ modules:
             -
               columnname: copies
             -
-              columnname: enumeration
+              columnname: issues
             -
               columnname: itemtypes
             -
