--- a/.github/ISSUE_TEMPLATE/bugi.yaml
+++ b/.github/ISSUE_TEMPLATE/bugi.yaml
@@ -1,59 +1,51 @@
-name: 🐞 Bug
-description: File a bug/issue
-title: "[BUG] <title>"
-labels: [Bug, Needs Triage]
+name: Bugi
+description: Lisää tukipyyntö liittyen Kirkes-konversioon
+title: "[Bugi] <title>"
+labels: [bug]
 body:
-- type: checkboxes
-  attributes:
-    label: Is there an existing issue for this?
-    description: Please search to see if an issue already exists for the bug you encountered.
-    options:
-    - label: I have searched the existing issues
-      required: true
 - type: textarea
   attributes:
-    label: Current Behavior
-    description: A concise description of what you're experiencing.
+    label: Mikä vikana?
+    description: Kerro, mikä on vikana.
   validations:
     required: false
 - type: textarea
   attributes:
-    label: Expected Behavior
-    description: A concise description of what you expected to happen.
+    label: Mitä pitäisi tapahtua
+    description: Mitä pitäisi tapahtua?
   validations:
     required: false
 - type: textarea
   attributes:
-    label: Steps To Reproduce
-    description: Steps to reproduce the behavior.
+    label: Kuinka toistaa ongelma/asia
+    description: Kuinka voi toistaa ongelman/asian?
     placeholder: |
-      1. In this environment...
-      2. With this config...
-      3. Run '...'
-      4. See error...
+      1. Kohan osio...
+      2. Järjestelmäastus...
+      3. Aja '...'
+      4. Virheilmoitus...
   validations:
     required: false
 - type: textarea
   attributes:
-    label: Environment
+    label: Selain
     description: |
       examples:
-        - **OS**: Ubuntu 20.04
-        - **Node**: 13.14.0
-        - **npm**: 7.6.3
+        - Firefox versio x.xx
+        - Chrome
+        - Edge
     value: |
-        - OS:
-        - Node:
-        - npm:
+        - Firefox:
+        - Chrome:
+        - Edge:
     render: markdown
   validations:
     required: false
 - type: textarea
   attributes:
-    label: Anything else?
+    label: Jotain muuta?
     description: |
-      Links? References? Anything that will give us more context about the issue you are encountering!
-
-      Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+     Lisätietoja aiheesta.
+      Vinkki: Voit liittää kuvia tai tiedostoja klikkaamalla tätä aluetta ja vetämällä kuvan tai tiedoston tänne.
   validations:
     required: false
