--- a/.github/ISSUE_TEMPLATE/kehitysehdotus.yaml
+++ b/.github/ISSUE_TEMPLATE/kehitysehdotus.yaml
@@ -1,7 +1,7 @@
 name: Kehitysehdotus
 description: Lisää kehitysehdotus. Muista lisätä [Bugi]-riville otsikko ja oikealle projekti-osioon "Tikettien seuranta".
 title: "[Kehitysehdotus] "
-labels: [enhancement]
+labels: ["enhancement"]
 body:
 - type: textarea
   attributes:
