--- a/.github/ISSUE_TEMPLATE/bugi.yaml
+++ b/.github/ISSUE_TEMPLATE/bugi.yaml
@@ -45,3 +45,30 @@ body:
       Vinkki: Voit liittää kuvia tai tiedostoja klikkaamalla tätä aluetta ja vetämällä kuvan tai tiedoston tänne.
   validations:
     required: false
+- type: dropdown
+  id: osio
+  attributes:
+    label: Kohan osio
+    description: Mihin Kohan osioon ehdotus liittyy?
+    options:
+      - Asiakastiedot
+      - Automaatit
+      - Hankinta
+      - Itsepalvelu
+      - Kausijulkaisut
+      - Kieliasu
+      - Kuvailu
+      - Lainaus
+      - Laskutus
+      - Maksut
+      - Niteet
+      - Palautus
+      - Raportit ja tilastot
+      - Tiedonhaku
+      - Työkalut
+      - Varaukset
+      - Verkkokirjasto
+      - Viestit
+      - Ylläpito
+  validations:
+    required: false
